A bunch of visual fixes
* Better adjusting for the top navigation bar links + watch star
** TODO: I'm still not 100% happy with the links but this'll do for now.
* Don't hard-code in avatar dimensions when using SocialProfile avatars, that won't work the way you think it does and it'll just make the avatars look blurry
** Had to ditch some IE8 compatibility code to make this work. Oh well.
** Also swapped avatar size from large (75x75 pixels) to medium (30x30 pixels)
* Show both Echo notifications and alerts in the top bar

Also includes some random coding style tweaks.

This is all tested, though only on MW 1.35 (yes, I had to make two tiny hacks, not present here, to make the code run on 1.35) and only on the "desktop" view.

--- a/components/main/common.less
+++ b/components/main/common.less
@@ -349,9 +349,11 @@ pre,
 	word-spacing: 4px;
 }
 
+#pt-notifications-alert .mw-echo-notifications-badge,
 #pt-notifications-notice .mw-echo-notifications-badge {
-	left: 0.7em;
-	right: 0.4em;
-	top: 0.5em;
-	padding-right: 11.5em;
+	background-repeat: no-repeat;
+}
+
+#pt-notifications-notice {
+	padding-left: 10px;
 }
